@@ -1,3 +1,9 @@
+2009-03-22  Noel O'Boyle  <baoilleach@gmail.com>
+
+	* src/formats/smilesformat.cpp: Rewrote the SMILES parsing code to set
+	entries in atom4refs directly, rather than adding to the end of the
+	current atom4refs.
+
 2009-03-20  Geoffrey Hutchison  <babel@geoffhutchison.net>
 
 	* src/formats/smilesformat.cpp: Fix for previous commit on 2009-01-10.
